--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+  <!-- Página inicial -->
   <section id="introduction">
     <div class="container">
       <div class="row fill-viewport align-items-center">
@@ -24,8 +24,7 @@
     </div>
   </section>
 
-
-
+  <!-- Section 1 -->
   <section id="info--1">
     <div class="container">
       <div class="row pt-5 align-items-center">
@@ -59,30 +58,180 @@
     </div>
   </section>
 
+  <!-- Section 2 -->
+  <section id="info-2" class="bg-dark">
+    <div class="container">
+      <div class="row align-items-center fill-80-viewport">
+        <div class="col-12 col-md-6 my-5 order-2 order-md-1">
+          <p class="text-uppercase text-white"><strong>desenvolvimento mais rápido</strong></p>
+          <p class="lead text-white">Pare de contratar engenheiros para escrever seu código. Basta instalar um script que magicamente resolve todos os seus problemas.
+          </p>
+          <a class="btn btn-light d-block d-md-inline-block py-3 text-uppercase" href="#" role="button">leia os documentos</a>
+        </div>
+        <pre class="col-12 col-md-6 my-5 order-1 order-md-2 py-4 border border-info rounded text-info">
+         <span>1</span> <span> //codingSteroids.js</span> 
+         <span>2</span>
+         <span>3</span>   const data = {
+         <span>4</span>        "purpose": {
+         <span>5</span>        "getId": "#element",
+         <span>6</span>        "companyName": "coolStartup",
+         <span>7</span>      }
+         <span>8</span>    }
+         <span>9</span>     
+         <span>10</span>   function codingSteroids(  
+         <span>11</span>       data,
+         <span>12</span>       getSteroidsType
+         <span>13</span>   ) 
+         <span>14</span>     
+         <span>15</span>   function getSteroidsType() {
+         <span>16</span>     return "codeHellish!"
+         <span>17</span>   }
+         </pre>
+      </div>
+    </div>
+  </section>
 
+  <!-- Section 3 -->
+  <section id="info-3">
+    <div class="container">
+      <div class="row fill-80-viewport align-items-center justify-content-end text-white">
+        <div class="col-12 basis-md-50">
+          <h6 class="text-white-40">
+            O que os outros pensam
+          </h6>
+          <h3>"Codificar com engenheiros é de tirar o fôlego. Concentro-me menos em escrever códigos enquanto tiro fotos de modelos ao redor do mundo."</h3>
+          <p class="text-uppercase text-white-70">FUNDADOR, THE OCUMPIOUS STARTUP</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section id="featured-on" class="bg-primary">
+    <div class="container">
+      <div class="row py-5 text-center text-white">
+        <div class="col-12">
+          <i class="fa fa-3x fa-free-code-camp my-3 mx-5" aria-hidden="true"></i>
+          <i class="fa fa-3x fa-twitter my-3 mx-4" aria-hidden="true"></i>
+          <i class="fa fa-3x fa-facebook my-3 mx-4" aria-hidden="true"></i>
+          <i class="fa fa-3x fa-quora my-3 mx-4" aria-hidden="true"></i>
+          <i class="fa fa-3x fa-reddit my-3 mx-4" aria-hidden="true"></i>
+          <i class="fa fa-3x fa-pied-piper my-3 mx-4" aria-hidden="true"></i>
+          <i class="fa fa-3x fa-paypal my-3 mx-4" aria-hidden="true"></i>
+          <i class="fa fa-3x fa-product-hunt my-3 mx-4" aria-hidden="true"></i>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <section id="info--2"></section>
-  <section id="info--3"></section>
-  <section id="featured-on"></section>
-  <section id="feature-rundown"></section>
-  <section id="pricing"></section>
-  <section id="footer"></section>
+  <section id="pricing" class="bg-light">
+    <div class="container fill-80-viewport">
+      <div class="row">
+        <div class="col-12 col-md-6 mx-auto text-center my-5">
+          <h6 class="text-black-40 text-uppercase">
+            PREÇOS
+          </h6>
+          <h3 class="text-black-70 text-uppercase">Preços acessíveis.</h3>
+        </div>
+      </div>
+      <div class="row pb-5">
+        <div class="col-12 col-md-4 px-2 my-4 text-center">
+          <h6 class="text-black-40 text-uppercase">
+            PESSOAL
+          </h6>
+          <img src="http://bit.ly/2y9EpP2" class="my-4" />
+          <p>Potência boa o suficiente</p>
+          <ul class="list-unstyled list-border-black-20 list-border-y text-left text-black-70">
+            <li class="py-2"><strong>10 mil</strong>solicitações mensais</li>
+            <li class="py-2"><strong>Suporte técnico</strong>
+              das 08:00 ás 18:00hs</li>
+            <li class="py-2"><strong>Acesso público à</strong>
+              API</li>
+          </ul>
+          <a class="btn btn-block btn-primary border-0 text-white py-3" href="#">COMEÇAR</a>
+        </div>
 
+        <div class="col-12 col-md-4 px-2 my-4 text-center">
+          <h6 class="text-black-40 text-uppercase">
+            O NEGÓCIO
+          </h6>
+          <img src="http://bit.ly/2xKjVeS" class="my-4">
+          <p>Perfect for small
+            businesses.</p>
+          <ul class="list-unstyled  list-border-black-20 list-border-y text-left text-black-70">
+            <li class="py-2"><strong>100 mil</strong>solicitações mensais</li>
+            <li class="py-2"><strong>9am-5pm</strong>
+              suporte técnico</li>
+            <li class="py-2"><strong>Acesso a</strong>
+              API</li>
+          </ul>
+          <a class="btn btn-block btn-primary border-0 text-white py-3" href="#">COMEÇAR</a>
+        </div>
 
+        <div class="col-12 col-md-4 px-2 my-4 text-center">
+          <h6 class="text-black-40 text-uppercase">
+            CORPORATIVO
+          </h6>
+          <img src="http://bit.ly/2wjsVEl" class="my-4" />
+          <p>Super poderes ilimitados</p>
+          <ul class="list-unstyled list-border-black-20 list-border-y text-left text-black-70">
+            <li class="py-2"><strong>10,000 mil</strong> Solicitaçoes mensais</li>
+            <li class="py-2"><strong>9am-5pm</strong>
+              suporte técnico</li>
+            <li class="py-2"><strong>Publica e privado</strong>
+              Acesso a API</li>
+          </ul>
+          <a class="btn btn-block btn-primary border-0 text-white py-3" href="#">COMEÇAR</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
-</html>
+  <section id="footer" class="bg-dark">
+    <div class="container">
+      <div class="row fill-40-viewport py-5 text-white-70 align-items-center">
+        <div class="col-12 col-md-6">
+          <ul class="list-unstyled">
+            <li>
+              <h6 class="text-white">SOBRE</h6>
+            </li>
+            <li>Temos trabalhado na codificação de esteróides por todas as nossas vidas. Uma tecnologia inovadora merece tanta dedicação, né? Se você quiser saber mais ou estiver interessado em um emprego, entre em contato conosco a qualquer momento
+              <a class="text-white" href="https://twitter.com/OhansEmmanuel" target="_blank">@felpsg</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-2">
+          <ul class="list-unstyled">
+            <li>
+              <h6 class="text-white">PRODUTOS</h6>
+            </li>
+            <li>Caractérista</li>
+            <li>Examplos</li>
+            <li>Tour</li>
+            <li>Galeria</li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-2">
+          <ul class="list-unstyled">
+            <li>
+              <h6 class="text-white">APIS</h6>
+            </li>
+            <li>Dados Avançados</li>
+            <li>Simples</li>
+            <li>Tempo Real</li>
+            <li>Social</li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-2">
+          <ul class="list-unstyled">
+            <li>
+              <h6 class="text-white">JURÍDICO</h6>
+            </li>
+            <li>Termos</li>
+            <li>Legal</li>
+            <li>Privacidade</li>
+            <li>Licensa</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
